[metadata]
name = Isca
description = Isca utilities for running experiments and performing data analysis 
long_description = file: README.md
long_description_content_type = text/markdown
author = Isca Team
author_email = iscagcm@gmail.com
maintainer = Isca Team
maintainer_email = iscagcm@gmail.com
license = GPL-3.0
license-file = LICENSE
platform = any
keywords = atmospheric-science, planetary-science, climate-model
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Intended Audience :: Science/Research
    Natural Language :: English,
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
url = https://github.com/execlim/Isca
project_urls =
    Documentation = https://execlim.github.io/Isca/
    Bug Tracker = https://github.com/execlim/Isca/issues
    Source Code = https://github.com/execlim/Isca

[options]
zip_safe = False
package_dir =
    = isca
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    f90nml>=1.2
    jinja>=1.2
    numpy>=1.17.0
    pandas>=1.0
    sh>=1.14.0
    xarray>=0.16

[options.packages.find]
where = src

[options.extras_require]
test = pytest>=3.3

[build_sphinx]
source-dir = docs/source
build-dir = docs/_build
all-files = True

[flake8]
max-line-length = 100
ignore = D413, W503, W504 
inline-quotes = "

[pycodestyle]
ignore = D413, W503, W504 
max-line-length = 100
